--- a/Data_Types_Operators.ipynb
+++ b/Data_Types_Operators.ipynb
@@ -177,10 +177,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "0Kg1PjaUDaLl",
-        "outputId": "589125de-c9b8-49bb-af7c-2539b2fcb8fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "589125de-c9b8-49bb-af7c-2539b2fcb8fd"
       },
       "source": [
         "a=3\n",
@@ -235,10 +235,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "gZHy4uODKsQX",
-        "outputId": "cd70dc25-8c3f-4221-e804-2e080c7df6e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cd70dc25-8c3f-4221-e804-2e080c7df6e5"
       },
       "source": [
         "height = 3\n",
@@ -992,22 +992,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9Hzh7_vB1tpb"
+        "id": "9Hzh7_vB1tpb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3b47f202-9fa0-4377-90f9-3d09cd8d1982"
       },
       "source": [
         "given_name = \"Rahul\"\n",
         "middle_names = \"Shastri\"\n",
         "family_name = \"Mishra\"\n",
         "\n",
-        "name_length = #todo: calculate how long this name is\n",
+        "name_length = len(given_name+middle_names+family_name)#todo: calculate how long this name is\n",
         "\n",
         "# Now we check to make sure that the name fits within the driving license character limit\n",
         "# Nothing you need to do here\n",
         "driving_license_character_limit = 28\n",
         "print(name_length <= driving_license_character_limit)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
