--- a/Data_Types_Operators.ipynb
+++ b/Data_Types_Operators.ipynb
@@ -431,7 +431,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rkEh72gQFaK2"
+        "id": "rkEh72gQFaK2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c7507850-574b-4c16-bc7e-e8370deaedee"
       },
       "source": [
         "rent = 1700\n",
@@ -439,8 +443,16 @@
         "rent =rent + 700\n",
         "print(rent)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2700\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -456,7 +468,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gUkRhTKnH9mv"
+        "id": "gUkRhTKnH9mv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3337a760-b445-4e76-8684-436a3c2f3249"
       },
       "source": [
         "rent = 1700\n",
@@ -464,8 +480,16 @@
         "rent += 700\n",
         "print(rent)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2700\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -491,13 +515,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fqai63lgI8v8"
+        "id": "fqai63lgI8v8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "43081e82-027e-4707-90a9-120527cfb24d"
       },
       "source": [
         "print(3/2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -513,7 +549,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "L6ZPHtSyKogM"
+        "id": "L6ZPHtSyKogM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b2cea732-08a6-47bc-98ef-4a87b68a3209"
       },
       "source": [
         "a = 3\n",
@@ -522,8 +562,17 @@
         "print(type(a))\n",
         "print(type(b))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'int'>\n",
+            "<class 'float'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -541,7 +590,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_17RKbnXMvSZ"
+        "id": "_17RKbnXMvSZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "08add831-0d94-4eb0-ae9d-4860742c940b"
       },
       "source": [
         "a = float(3)\n",
@@ -549,8 +602,17 @@
         "print(a)\n",
         "print(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3.0\n",
+            "28\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -567,17 +629,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ecx9e1p8DuVJ"
+        "id": "ecx9e1p8DuVJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e7e4cff5-5ebc-496f-b702-3f92a358cddd"
       },
       "source": [
         "print(0.23 + 0.23 + 0.23 + 0.23 + 0.23 + 0.23\n",
         "       + 0.23 + 0.23 + 0.23 + 0.23 + 0.23 + 0.23\n",
         "       + 0.23 + 0.23 + 0.23 + 0.23 + 0.23 + 0.23\n",
         "       + 0.23 + 0.23 + 0.23 + 0.23 + 0.23 + 0.23\n",
+        "       + 0.23 + 0.23 + 0.23 + 0.23+ 0.23 + 0.23)\n",
+        "\n",
+        "print(0.23 + 0.23 + 0.23 + 0.23 + 0.23 + 0.23\n",
+        "       + 0.23 + 0.23 + 0.23 + 0.23 + 0.23 + 0.23\n",
+        "       + 0.23 + 0.23 + 0.23 + 0.23 + 0.23 + 0.23\n",
+        "       + 0.23 + 0.23 + 0.23 + 0.23 + 0.23 + 0.23\n",
         "       + 0.23 + 0.23 + 0.23 + 0.23+ 0.23 + 0.23 == 6.9)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6.900000000000006\n",
+            "False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -734,14 +815,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Krfhjf9NN0-D"
+        "id": "Krfhjf9NN0-D",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "979a88ef-8976-405a-a50c-fc2aaa67bdf1"
       },
       "source": [
         "motto = \"Learn | Code | Compete | Intern\" \n",
         "print(motto)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Learn | Code | Compete | Intern\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -755,13 +848,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YkyDHgq3RW6K"
+        "id": "YkyDHgq3RW6K",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "98758bb5-f2de-4235-f9e8-87b1339bac7d"
       },
       "source": [
         "type(motto)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
