--- a/Data_Types_Operators.ipynb
+++ b/Data_Types_Operators.ipynb
@@ -187,7 +187,7 @@
         "b=a\n",
         "print(b)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,7 +247,7 @@
         "volume = height * length * width\n",
         "print(volume)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -443,7 +443,7 @@
         "rent =rent + 700\n",
         "print(rent)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,7 +480,7 @@
         "rent += 700\n",
         "print(rent)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -524,7 +524,7 @@
       "source": [
         "print(3/2)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,7 +562,7 @@
         "print(type(a))\n",
         "print(type(b))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -602,7 +602,7 @@
         "print(a)\n",
         "print(b)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -648,7 +648,7 @@
         "       + 0.23 + 0.23 + 0.23 + 0.23 + 0.23 + 0.23\n",
         "       + 0.23 + 0.23 + 0.23 + 0.23+ 0.23 + 0.23 == 6.9)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -736,7 +736,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eN24eeGyHl6k"
+        "id": "eN24eeGyHl6k",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "37555164-ff72-44df-fae5-dbc6d3e8706e"
       },
       "source": [
         "rent = 1200\n",
@@ -744,8 +748,16 @@
         "\n",
         "print(is_affordable)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -825,7 +837,7 @@
         "motto = \"Learn | Code | Compete | Intern\" \n",
         "print(motto)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -857,7 +869,7 @@
       "source": [
         "type(motto)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1106,12 +1118,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3b47f202-9fa0-4377-90f9-3d09cd8d1982"
+        "outputId": "02454ca2-15fb-4953-e667-90f606248942"
       },
       "source": [
-        "given_name = \"Rahul\"\n",
-        "middle_names = \"Shastri\"\n",
-        "family_name = \"Mishra\"\n",
+        "given_name = \"Kishor\"\n",
+        "middle_names = \"Manikrao\"\n",
+        "family_name = \"Sonawane\"\n",
         "\n",
         "name_length = len(given_name+middle_names+family_name)#todo: calculate how long this name is\n",
         "\n",
@@ -1120,14 +1132,14 @@
         "driving_license_character_limit = 28\n",
         "print(name_length <= driving_license_character_limit)"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "True\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
